# seldegen

./: LICENSE  README.md  pyproject.toml
seldegen/: __init__.py  captcha_solver.py  captcha_waiter.py  context.py  email.py  exceptions.py  types.py
seldegen/abc/: __init__.py  base_account.py  browser_extension.py  dapp.py  wallet.py
seldegen/dapps/: __init__.py  guild.py  lens.py  snapshot.py
seldegen/extensions/: __init__.py  authenticator.py  capmonster.py
seldegen/socials/: __init__.py  discord.py  facebook.py  github.py  gmail.py  google.py  linkedin.py  twitter.py
seldegen/wallets/: __init__.py  metamask.py  sui_wallet.py
tests/: conftest.py  test_discord.py  test_facebook.py  test_github.py  test_google.py  test_guild.py  test_linkedin.py  test_metamask.py  test_snapshot.py  test_twitter.py
tests/extensions/: capmonster.crx
